--- a/src/Errors/Error.css
+++ b/src/Errors/Error.css
@@ -3,9 +3,11 @@
    height: 82vmin;
 }
 .background-parent-page{
-    background: url('../Image/Error404Page.jpg');
+    background: url('../Image/Error_robot.svg');
     background-repeat: no-repeat;
-    width: 100%;
-    height: 38.5vmax;
-    background-size: cover;
+    width: 50%;
+    height: 60vh;
+    margin: 40px auto;
+    background-position: center;
+    background-size: contain;
 }
